# ChangeLog for sys-apps/baselayout
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/baselayout/ChangeLog,v 1.472 2009/05/24 19:47:02 vapier Exp $

*baselayout-2.1.2 (08 Aug 2009)

  08 Aug 2009; Daniel Robbins <drobbins@funtoo.org> +baselayout-2.1.2.ebuild:
  Added some more initial device nodes, made chmod run all the time on device
  nodes and changed perms on /dev/null to 777 (was wrong before.)

*baselayout-2.1.1 (01 Aug 2009)

  01 Aug 2009; Daniel Robbins <drobbins@funtoo.org> +baselayout-2.1.1.ebuild:
  Add .conf suffixes to modprobe.d files. Add logic to move old files to new
  location so config file protection works correctly. Create and keep
  /etc/portage directory.

*baselayout-2.1 (31 Jul 2009)

  31 Jul 2009; Daniel Robbins <drobbins@funtoo.org> +baselayout-2.1.ebuild:
  new baselayout ebuild - rewritten quite a bit - reduced device nodes, more
  .keep files, various changes in core files including an /etc/fstab that
  contains a working sample config with /dev/sda{1,2,3} as boot, swap and
  root respectively. /etc/issue* intentionally removed.

  22 Jul 2009; Daniel Robbins <drobbins@funtoo.org> baselayout-2.0.0-r2.ebuild:
  removed dependency on upstream Makefile.

  14 Apr 2009; Daniel Robbins <drobbins@funtoo.org> baselayout-2.0.0-r2.ebuild:
  Reverting fix for bug 217848 which is no longer needed and creates a literal
  '/etc/conf.d/*' file.

  13 Mar 2009; Daniel Robbins <drobbins@funtoo.org> baselayout-2.0.0-r2.ebuild:
  marking stable for stable funtoo.

  03 Mar 2009; Daniel Robbins <drobbins@funtoo.org> baselayout-2.0.0-ebuild:
  Gentoo incorporated my /etc/shadow fix into their ebuild.

  27 Feb 2009; Daniel Robbins <drobbins@funtoo.org> +baselayout-2.0.0-r2.ebuild: 
  security fix to ensure that /etc/shadow is not world readable.
 
  01 Feb 2009; Daniel Robbins <drobbins@funtoo.org> baselayout-2.0.0-r1.ebuild: