@@ -1,0 +1,22 @@
+
+
+0
+http://www.funtoo.org/archive/baselayout/baselayout-2.1.1.tar.bz2
+
+http://www.funtoo.org/
+GPL-2
+Filesystem baselayout and init scripts
+alpha amd64 arm hppa ia64 m68k mips ppc ppc64 s390 sh sparc sparc-fbsd x86 x86-fbsd
+multilib toolchain-funcs
+build
+
+sys-apps/openrc
+
+
+
+compile install postinst preinst
+
+
+
+
+
