@@ -8,6 +8,7 @@ DIST baselayout-2.1.tar.bz2 22430 RMD160 0bfd0132dd5a78ce84c6ca8a7f86a5f5b75c867
 EBUILD baselayout-2.0.0-r2.ebuild 10386 RMD160 932612c45bfa240dcdcbb544197d6e60f3734633 SHA1 6ac73fffed16efa874055290e7bb22d52449644a SHA256 3aa251df5d5380a6129e985a82078a2a3dc7c6a438abb66e1c3b377321e070ec
 EBUILD baselayout-2.1.1.ebuild 8000 RMD160 e229f72e0871208397152bab84d8e4156020d3e8 SHA1 05d2a9fd0b17bf057730074c7794285f72b96a27 SHA256 e0db565e94df128632f23a86bcd2a310b4de2c77c0899299cc333fc47230eb57
 EBUILD baselayout-2.1.2.ebuild 8604 RMD160 9e0bfb174fae9e8bf13ad9dfbed25cf6ca1918da SHA1 d699deece5f85e4c090d5c1df94793f936e2a73b SHA256 c45fceff3541ed55c7cecfee5d6fd18632d70eeea04dccedd05bea3abf5fc0aa
+EBUILD baselayout-2.1.3.ebuild 8653 RMD160 79d41b030730fd2acefa8400502cb3ad81f6b2cb SHA1 3f931f75f792a5a5c91e2184a77bd55fc0b18ab3 SHA256 4b5fcb88b6cb34a739739f04547e3e6f00d6d3609f62ca5daa3c3ae5255ee296
 EBUILD baselayout-2.1.ebuild 7653 RMD160 35c54f9793264d2aecd8352f1f1b542b0d9220d0 SHA1 ca6ce3c61f1790bd7334c292f476a8c040d3dc04 SHA256 fa45bd46c4f22f0b246c1c9f72e894a8813beade7d1ad288a92d590a557f70b3
-MISC ChangeLog 105010 RMD160 f12f530a6bbfdf90fdc69cdd7c6086470b775ab4 SHA1 4de33ca142a6f3d571bf1c4de0b9ea0a4dab0097 SHA256 9b81b08878a6b9ac41db133ae33dfe484a5e6d3851190f274630dde7e057b359
+MISC ChangeLog 105328 RMD160 86a2f64ddaf449a0e19f7e3d7bf84a49106dab71 SHA1 265077e7c094bcd919c4dbf8b01af114d6fcef74 SHA256 76d5926ab7d73f8e3441cb37923b712bc6e4061d5f6fec959d1bca93c0413b12
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
